lintian (2.3.3) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - missing-dependency-on-phpapi
      - obsolete-comments-style-in-php-ini

  * checks/binaries{,.desc}:
    + [RG] Warn about packages shipping PHP extensions but not
      depending on phpapi-*.
  * checks/files{,.desc}:
    + [RG] Warn about packages shipping PHP .ini files using old-style
      (#) comments separators.
    + [RG] Warn about packages embedding the dojo and dijit javascript
      libraries.

  * debian/control:
    + [RG] Update standards version to 3.8.4 (no changes required).

 -- Raphael Geissert <geissert@debian.org>  Thu, 28 Jan 2010 15:31:11 -0600

lintian (2.3.2) unstable; urgency=high

  * Summary of tag changes:
    + Added:
      - conflicting-negation-in-source-relation

  * checks/{control-files,files,menu-format,menus}:
    + [RG] Fix CVE-2009-4014: format string vulnerabilities.
  * checks/{fields,patch-systems}:
    + [RG] Fix CVE-2009-4013: missing control files sanitation.
  * checks/{files,patch-systems,po-debconf}:
    + [RG] Fix CVE-2009-4015: arbitrary command execution.
  * checks/changelog-file:
    + [RA] Avoid Perl warning when the NEWS file ends immediately after
      the most recent entry.  (Closes: #563585)
  * checks/copyright-file:
    + [RA] Relax the regex for matching dh-make-perl boilerplate to catch
      the current text.  Thanks, gregor herrmann.  (Closes: #563571)
  * checks/fields{,.desc}:
    + [RA] Reject "all" and "any" in architecture qualifications for build
      dependencies.  Thanks, Jonathan Yu.
    + [RA] Warn if some architectures in a build relation are negated and
      others are not.
  * checks/files.desc:
    + [JP] Fix outdated reference in file-in-usr-lib-site-python.
  * checks/infofiles:
    + [RA] Pass LOCPATH to subprocesses.
    + [ADB] Don't flag info files with filenames of info-N.gz as having an
      incorrect extension if N contains multiple digits.  (Closes: #564900)
  * checks/manpages: