@@ -4,7 +4,7 @@ Binary: control-field-traversal-3
 Architecture: all
 Version: 1
 Maintainer: Debian Lintian Maintainers <lintian-maint@debian.org>
-Standards-Version: 3.8.3
+Standards-Version: 3.8.4
 Build-Depends: debhelper (>= 7)
 Checksums-Sha1:
  @SHA1@ @SIZE@ control-field-traversal-3_1.tar.gz
