@@ -5,6 +5,9 @@ lintian (2.3.3) UNRELEASED; urgency=low
       - missing-dependency-on-phpapi
       - obsolete-comments-style-in-php-ini
 
+  * data/standards-version/release-dates:
+    + [RG] Add the release date for Policy 3.8.4.
+
   * checks/binaries{,.desc}:
     + [RG] Warn about packages shipping PHP extensions but not
       depending on phpapi-*.
@@ -16,6 +19,9 @@ lintian (2.3.3) UNRELEASED; urgency=low
 
   * debian/control:
     + [RG] Update standards version to 3.8.4 (no changes required).
+
+  * t/runtests:
+    + [RG] Update standards version to 3.8.4.
 
  -- Raphael Geissert <geissert@debian.org>  Thu, 28 Jan 2010 15:31:11 -0600
 
